added docker and redis
